changed meta content

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,7 +10,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Bookshelves - Store your books in shelves"
+      content="Bookshelves - Your library, digitalized"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
