another description change

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,7 +8,10 @@
       content="width=device-width, initial-scale=1, user-scalable=no"
     />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Bookshelves - Your library, digitized" />
+    <meta
+      name="description"
+      content="Bookshelves - Your bookshelves, digitized"
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
